# ha-sused-slovnaft

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  hacs.yml  hassfest.yml  lint.yml  tests.yml
custom_components/slovnaft/: __init__.py  api.py  binary_sensor.py  calendar.py  config_flow.py  const.py  coordinator.py  manifest.json  models.py  sensor.py
custom_components/slovnaft/translations/: en.json  sk.json
tests/: conftest.py  test_api.py  test_calendar.py  test_config_flow.py  test_init.py  test_logic.py  test_sensors.py
