[project]
name = "ha-sused-slovnaft"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.16",
    "homeassistant>=2025.4.4",
]

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-homeassistant-custom-component>=0.13.236",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_test_loop_scope = "function"
testpaths = ["tests"]
norecursedirs = [".venv", "custom_components"]